 * Added pretty styles to Import screen.
 * Changed eprint_render to call null action on request copy screen.

2006-12-11 cjg
 * Added Readonly.pm

2006-12-11 cjg
 * Abstract search now does not abort on bad plugin in redirect substage.

2006-12-11 cjg
 * Now removes expired login tickets.

2006-12-11 cjg 
 * Fixed bug in "next" search results 
 * List was leaving stray caches around. Fixed.
 * NULL dir field in EPrint now causes abort: it's too serious for just a 
    warning.

2006-12-12 moj
 * Shifted time/date-related functions from Utils to Time.
 * Added moved functions to BackCompatibility
 * Searched/Replaced any functions that were moved and updated to 
    Time.

2006-12-12 moj
 * Added help for corp authors

2006-12-12 moj
 * Removed a '!' and fixed the required fields bug

2006-12-12 cjg
 * Added Subject::Edit
 * Fixed bug in filtered searches when searchfields were being OR'd so 
    were filters. Which was bad.
 * Multilang subjects now don't spew warnings to log if they have undefined
    languages (although there should be a validation issue)
 * Added more code to keep abstract search from spewing warnings when it
    gets odd params.
 * Added subject editor to admin options.

2006-12-12 cjg
 * Added hook on files modified.

2006-12-12 cjg
 * Added description for subject::edit
 * Made multilang use $c->{languages} for their default list of langs.
 * ...or take it from a multifield property.

2006-12-12 cjg
 * Another attempt to supress the odd no-results bug we're seeing in the log.
 * Added a warning if no contact_email and no public docs.

2006-12-12 cjg
 * Boolean fields which are not required now get an UNSPECIFIED option
 * workflow can override the top subject field and the options from a set
 
2006-12-12 cjg
 * Added a way to override parameters of plugins.
 * Added "advertised" option to import/export plugins to allow them to
    still work, but not get advertised that they are available.
 * Added examples to plugins.pl
