@@ -6030,3 +6030,7 @@ PACKAGE: 2.2.99.2
     still work, but not get advertised that they are available.
  * Added examples to plugins.pl
 
+2006-12-12 cjg
+ * namedset fields can have an option param. This is largely used to limit
+    the options shown in workflows.
+
